[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Scripts/Pickable.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]
radius = 0.25

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.921569, 0.337255, 0.0823529, 1 )

[sub_resource type="CylinderShape" id=3]
height = 1.0

[node name="Pickable" type="KinematicBody"]
collision_layer = 16
collision_mask = 0
script = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
shape = SubResource( 1 )

[node name="CSGSphere" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
radius = 0.25
radial_segments = 8
rings = 4
material = SubResource( 2 )

[node name="PickArea" type="Area" parent="."]
input_ray_pickable = false
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="PickArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 3 )
[connection signal="input_event" from="." to="." method="pick_or_reach"]
[connection signal="body_entered" from="PickArea" to="." method="body_entered_pick_area"]
[connection signal="body_exited" from="PickArea" to="." method="body_exited_pick_area"]
